--- a/covidIncidencePkg.ipynb
+++ b/covidIncidencePkg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,26 +14,328 @@
     "using POMDPs\n",
     "using POMDPPolicies\n",
     "using Random\n",
-    "#using ARDESPOT\n",
     "using ParticleFilters\n",
-    "#using Statistics\n",
-    "#using UUIDs\n",
-    "#using MCTS\n",
-    "#using MCVI\n",
-    "#using Parameters\n",
-    "using POMCPOW\n",
-    "#using Roots\n",
-    "#using SpecialFunctions\n",
-    "#using QuadGK\n",
-    "#using LinearAlgebra\n",
-    "\n"
+    "using POMCPOW"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Noising mobilities | std: [0.159, 0.149, 0.185, 0.124, 0.164]\n",
+      "Noising confounds | std: [6.82524674412e9, 1.77005605606039e12, 1.5558643518773e10, 1.02412395113e8, 6.89008819020368e11]\n",
+      "Noising mobilities | std: [0.258, 0.086, 0.07, 0.034, 0.295]\n",
+      "Noising confounds | std: [0.0, 0.866, 0.0, 0.866, 0.0]\n",
+      "Noising mobilities | std: [0.036, 0.013, 0.033, 0.012, 0.029]\n",
+      "Noising confounds | std: [0.007, 0.387, 0.005, 0.413, 0.005]\n",
+      "Noising mobilities | std: [0.034, 0.012, 0.038, 0.011, 0.032]\n",
+      "Noising confounds | std: [0.01, 0.279, 0.007, 0.247, 0.007]\n",
+      "Noising mobilities | std: [0.028, 0.004, 0.016, 0.004, 0.02]\n",
+      "Noising confounds | std: [0.009, 0.077, 0.003, 0.064, 0.005]\n",
+      "Noising mobilities | std: [0.028, 0.006, 0.02, 0.005, 0.02]\n",
+      "Noising confounds | std: [0.011, 0.071, 0.007, 0.06, 0.009]\n",
+      "Noising mobilities | std: [0.032, 0.006, 0.023, 0.006, 0.022]\n",
+      "Noising confounds | std: [0.014, 0.065, 0.011, 0.061, 0.011]\n",
+      "Noising mobilities | std: [0.027, 0.007, 0.022, 0.008, 0.018]\n",
+      "Noising confounds | std: [0.014, 0.056, 0.013, 0.032, 0.011]\n",
+      "Noising mobilities | std: [0.016, 0.001, 0.036, 0.009, 0.028]\n",
+      "Noising confounds | std: [0.02, 0.079, 0.012, 0.046, 0.008]\n",
+      "Noising mobilities | std: [0.016, 0.004, 0.018, 0.01, 0.015]\n",
+      "Noising confounds | std: [0.014, 0.022, 0.011, 0.015, 0.009]\n",
+      "Noising mobilities | std: [0.017, 0.006, 0.016, 0.005, 0.015]\n",
+      "Noising confounds | std: [0.014, 0.028, 0.014, 0.018, 0.012]\n",
+      "Noising mobilities | std: [0.011, 0.005, 0.008, 0.004, 0.01]\n",
+      "Noising confounds | std: [0.01, 0.012, 0.011, 0.009, 0.007]\n",
+      "Noising mobilities | std: [0.016, 0.006, 0.01, 0.005, 0.01]\n",
+      "Noising confounds | std: [0.012, 0.014, 0.012, 0.018, 0.008]\n",
+      "Noising mobilities | std: [0.015, 0.005, 0.011, 0.005, 0.012]\n",
+      "Noising confounds | std: [0.016, 0.018, 0.01, 0.02, 0.01]\n",
+      "Noising mobilities | std: [0.015, 0.006, 0.012, 0.007, 0.01]\n",
+      "Noising confounds | std: [0.017, 0.016, 0.013, 0.02, 0.01]\n",
+      "Noising mobilities | std: [0.014, 0.006, 0.013, 0.003, 0.008]\n",
+      "Noising confounds | std: [0.011, 0.015, 0.012, 0.015, 0.008]\n",
+      "Noising mobilities | std: [0.018, 0.007, 0.018, 0.003, 0.012]\n",
+      "Noising confounds | std: [0.013, 0.018, 0.015, 0.014, 0.008]\n",
+      "Noising mobilities | std: [0.019, 0.008, 0.02, 0.005, 0.013]\n",
+      "Noising confounds | std: [0.018, 0.022, 0.02, 0.016, 0.008]\n",
+      "Noising mobilities | std: [0.019, 0.008, 0.017, 0.007, 0.016]\n",
+      "Noising confounds | std: [0.019, 0.024, 0.021, 0.019, 0.011]\n",
+      "Noising mobilities | std: [0.019, 0.007, 0.023, 0.007, 0.011]\n",
+      "Noising confounds | std: [0.015, 0.028, 0.023, 0.016, 0.016]\n",
+      "Noising mobilities | std: [0.02, 0.008, 0.021, 0.007, 0.015]\n",
+      "Noising confounds | std: [0.019, 0.032, 0.029, 0.017, 0.016]\n",
+      "Noising mobilities | std: [0.015, 0.01, 0.013, 0.004, 0.012]\n",
+      "Noising confounds | std: [0.018, 0.046, 0.031, 0.025, 0.039]\n",
+      "Noising mobilities | std: [0.01, 0.004, 0.01, 0.003, 0.012]\n",
+      "Noising confounds | std: [0.011, 0.011, 0.015, 0.013, 0.007]\n",
+      "Noising mobilities | std: [0.013, 0.006, 0.012, 0.004, 0.012]\n",
+      "Noising confounds | std: [0.014, 0.011, 0.015, 0.017, 0.008]\n",
+      "Noising mobilities | std: [0.015, 0.006, 0.017, 0.005, 0.013]\n",
+      "Noising confounds | std: [0.016, 0.016, 0.02, 0.015, 0.012]\n",
+      "Noising mobilities | std: [0.019, 0.006, 0.02, 0.006, 0.016]\n",
+      "Noising confounds | std: [0.019, 0.017, 0.021, 0.021, 0.017]\n",
+      "Noising mobilities | std: [0.023, 0.007, 0.018, 0.006, 0.015]\n",
+      "Noising confounds | std: [0.021, 0.016, 0.019, 0.022, 0.026]\n",
+      "Noising mobilities | std: [0.016, 0.011, 0.016, 0.005, 0.019]\n",
+      "Noising confounds | std: [0.015, 0.017, 0.01, 0.02, 0.024]\n",
+      "Noising mobilities | std: [0.012, 0.005, 0.009, 0.004, 0.014]\n",
+      "Noising confounds | std: [0.012, 0.012, 0.011, 0.012, 0.007]\n",
+      "Noising mobilities | std: [0.016, 0.004, 0.014, 0.005, 0.015]\n",
+      "Noising confounds | std: [0.015, 0.015, 0.016, 0.015, 0.008]\n",
+      "Noising mobilities | std: [0.018, 0.005, 0.015, 0.006, 0.017]\n",
+      "Noising confounds | std: [0.016, 0.016, 0.018, 0.022, 0.01]\n",
+      "Noising mobilities | std: [0.023, 0.009, 0.017, 0.007, 0.018]\n",
+      "Noising confounds | std: [0.018, 0.026, 0.03, 0.017, 0.008]\n",
+      "Noising mobilities | std: [0.026, 0.003, 0.033, 0.008, 0.014]\n",
+      "Noising confounds | std: [0.008, 0.012, 0.016, 0.004, 0.009]\n",
+      "Noising mobilities | std: [0.014, 0.005, 0.017, 0.006, 0.013]\n",
+      "Noising confounds | std: [0.012, 0.009, 0.018, 0.01, 0.006]\n",
+      "Noising mobilities | std: [0.015, 0.004, 0.014, 0.005, 0.017]\n",
+      "Noising confounds | std: [0.01, 0.011, 0.013, 0.017, 0.009]\n",
+      "Noising mobilities | std: [0.019, 0.004, 0.015, 0.006, 0.019]\n",
+      "Noising confounds | std: [0.013, 0.015, 0.016, 0.022, 0.01]\n",
+      "Noising mobilities | std: [0.023, 0.007, 0.01, 0.001, 0.006]\n",
+      "Noising confounds | std: [0.004, 0.01, 0.028, 0.004, 0.019]\n",
+      "Noising mobilities | std: [0.008, 0.003, 0.006, 0.003, 0.008]\n",
+      "Noising confounds | std: [0.011, 0.01, 0.009, 0.011, 0.009]\n",
+      "Noising mobilities | std: [0.01, 0.003, 0.007, 0.003, 0.008]\n",
+      "Noising confounds | std: [0.019, 0.013, 0.012, 0.014, 0.01]\n",
+      "Noising mobilities | std: [0.01, 0.004, 0.01, 0.003, 0.011]\n",
+      "Noising confounds | std: [0.024, 0.017, 0.019, 0.013, 0.013]\n",
+      "Noising mobilities | std: [0.009, 0.005, 0.009, 0.004, 0.008]\n",
+      "Noising confounds | std: [0.01, 0.015, 0.016, 0.016, 0.004]\n",
+      "Noising mobilities | std: [0.007, 0.003, 0.005, 0.002, 0.008]\n",
+      "Noising confounds | std: [0.011, 0.007, 0.008, 0.014, 0.008]\n",
+      "Noising mobilities | std: [0.01, 0.004, 0.007, 0.003, 0.008]\n",
+      "Noising confounds | std: [0.018, 0.01, 0.013, 0.015, 0.013]\n",
+      "Noising mobilities | std: [0.005, 0.003, 0.006, 0.003, 0.007]\n",
+      "Noising confounds | std: [0.014, 0.004, 0.015, 0.008, 0.011]\n",
+      "Noising mobilities | std: [0.007, 0.004, 0.007, 0.003, 0.009]\n",
+      "Noising confounds | std: [0.012, 0.007, 0.02, 0.009, 0.013]\n",
+      "Noising mobilities | std: [0.01, 0.003, 0.012, 0.002, 0.008]\n",
+      "Noising confounds | std: [0.011, 0.014, 0.009, 0.015, 0.01]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.03, 0.012, 0.028, 0.01, 0.029]\n",
+      "Noising confounds | std: [0.011, 0.01, 0.009, 0.01, 0.01]\n",
+      "Noising mobilities | std: [0.028, 0.008, 0.036, 0.01, 0.037]\n",
+      "Noising confounds | std: [0.017, 0.016, 0.015, 0.01, 0.014]\n",
+      "Noising mobilities | std: [0.016, 0.008, 0.04, 0.008, 0.031]\n",
+      "Noising confounds | std: [0.015, 0.018, 0.011, 0.013, 0.013]\n",
+      "Noising mobilities | std: [0.02, 0.007, 0.038, 0.006, 0.032]\n",
+      "Noising confounds | std: [0.02, 0.013, 0.012, 0.013, 0.015]\n",
+      "Noising mobilities | std: [0.021, 0.008, 0.035, 0.006, 0.033]\n",
+      "Noising confounds | std: [0.025, 0.018, 0.015, 0.018, 0.019]\n",
+      "Noising mobilities | std: [0.017, 0.004, 0.04, 0.01, 0.017]\n",
+      "Noising confounds | std: [0.038, 0.008, 0.001, 0.007, 0.017]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.034, 0.013, 0.028, 0.01, 0.027]\n",
+      "Noising confounds | std: [0.009, 0.01, 0.009, 0.011, 0.009]\n",
+      "Noising mobilities | std: [0.033, 0.015, 0.029, 0.012, 0.032]\n",
+      "Noising confounds | std: [0.013, 0.013, 0.013, 0.016, 0.012]\n",
+      "Noising mobilities | std: [0.029, 0.013, 0.028, 0.016, 0.038]\n",
+      "Noising confounds | std: [0.016, 0.018, 0.021, 0.013, 0.012]\n",
+      "Noising mobilities | std: [0.011, 0.014, 0.027, 0.007, 0.024]\n",
+      "Noising confounds | std: [0.017, 0.018, 0.042, 0.014, 0.01]\n",
+      "Noising mobilities | std: [0.012, 0.005, 0.019, 0.006, 0.017]\n",
+      "Noising confounds | std: [0.01, 0.01, 0.017, 0.014, 0.01]\n",
+      "Noising mobilities | std: [0.012, 0.004, 0.013, 0.001, 0.014]\n",
+      "Noising confounds | std: [0.013, 0.011, 0.01, 0.01, 0.006]\n",
+      "Noising mobilities | std: [0.009, 0.003, 0.007, 0.002, 0.012]\n",
+      "Noising confounds | std: [0.01, 0.007, 0.007, 0.007, 0.009]\n",
+      "Noising mobilities | std: [0.008, 0.002, 0.008, 0.002, 0.012]\n",
+      "Noising confounds | std: [0.018, 0.01, 0.01, 0.014, 0.01]\n",
+      "Noising mobilities | std: [0.01, 0.003, 0.008, 0.003, 0.012]\n",
+      "Noising confounds | std: [0.013, 0.014, 0.015, 0.013, 0.011]\n",
+      "Noising mobilities | std: [0.008, 0.005, 0.009, 0.002, 0.01]\n",
+      "Noising confounds | std: [0.013, 0.014, 0.013, 0.017, 0.015]\n",
+      "Noising mobilities | std: [0.002, 0.001, 0.007, 0.002, 0.006]\n",
+      "Noising confounds | std: [0.005, 0.002, 0.02, 0.011, 0.006]\n",
+      "Noising mobilities | std: [0.005, 0.003, 0.004, 0.001, 0.005]\n",
+      "Noising confounds | std: [0.011, 0.012, 0.009, 0.011, 0.009]\n",
+      "Noising mobilities | std: [0.008, 0.003, 0.004, 0.001, 0.005]\n",
+      "Noising confounds | std: [0.015, 0.008, 0.015, 0.016, 0.013]\n",
+      "Noising mobilities | std: [0.007, 0.003, 0.005, 0.001, 0.005]\n",
+      "Noising confounds | std: [0.012, 0.01, 0.01, 0.009, 0.011]\n",
+      "Noising mobilities | std: [0.007, 0.002, 0.003, 0.0, 0.007]\n",
+      "Noising confounds | std: [0.012, 0.007, 0.017, 0.011, 0.008]\n",
+      "Noising mobilities | std: [0.008, 0.003, 0.005, 0.001, 0.008]\n",
+      "Noising confounds | std: [0.011, 0.01, 0.009, 0.01, 0.009]\n",
+      "Noising mobilities | std: [0.012, 0.006, 0.005, 0.002, 0.016]\n",
+      "Noising confounds | std: [0.021, 0.014, 0.013, 0.013, 0.011]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.031, 0.015, 0.023, 0.007, 0.028]\n",
+      "Noising confounds | std: [0.009, 0.01, 0.01, 0.01, 0.011]\n",
+      "Noising mobilities | std: [0.039, 0.005, 0.025, 0.007, 0.032]\n",
+      "Noising confounds | std: [0.017, 0.019, 0.007, 0.012, 0.009]\n",
+      "Noising mobilities | std: [0.015, 0.006, 0.01, 0.003, 0.014]\n",
+      "Noising confounds | std: [0.009, 0.011, 0.009, 0.009, 0.011]\n",
+      "Noising mobilities | std: [0.012, 0.004, 0.006, 0.001, 0.009]\n",
+      "Noising confounds | std: [0.012, 0.007, 0.019, 0.004, 0.001]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.03, 0.017, 0.019, 0.006, 0.031]\n",
+      "Noising confounds | std: [0.009, 0.01, 0.01, 0.01, 0.009]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.028, 0.019, 0.02, 0.009, 0.028]\n",
+      "Noising confounds | std: [0.01, 0.009, 0.01, 0.009, 0.011]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.031, 0.018, 0.026, 0.008, 0.033]\n",
+      "Noising confounds | std: [0.01, 0.011, 0.01, 0.009, 0.009]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.03, 0.021, 0.021, 0.008, 0.029]\n",
+      "Noising confounds | std: [0.009, 0.009, 0.01, 0.01, 0.01]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.028, 0.024, 0.022, 0.006, 0.028]\n",
+      "Noising confounds | std: [0.011, 0.011, 0.009, 0.01, 0.01]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.027, 0.019, 0.022, 0.005, 0.023]\n",
+      "Noising confounds | std: [0.011, 0.009, 0.01, 0.01, 0.01]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising mobilities | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "Noising confounds | std: [0.1, 0.1, 0.1, 0.1, 0.1]\n",
+      "r = 91\n",
+      "r = 61\n",
+      "r = 60\n",
+      "r = 45\n",
+      "r = 53\n",
+      "r = 112\n",
+      "r = 149\n",
+      "r = 82\n",
+      "r = 129\n",
+      "r = 118\n",
+      "r = 54\n",
+      "r = 205\n",
+      "r = 134\n",
+      "r = 128\n",
+      "r = 117\n",
+      "r = 155\n",
+      "r = 97\n",
+      "r = 176\n",
+      "r = 158\n",
+      "r = 131\n",
+      "r = 172\n",
+      "r = 218\n",
+      "r = 270\n",
+      "r = 290\n",
+      "r = 283\n",
+      "r = 262\n",
+      "r = 344\n",
+      "r = 418\n",
+      "r = 445\n",
+      "r = 582\n",
+      "r = 473\n",
+      "r = 449\n",
+      "r = 647\n",
+      "r = 512\n",
+      "r = 555\n",
+      "r = 1377\n",
+      "r = 836\n",
+      "r = 680\n",
+      "r = 402\n",
+      "r = 379\n",
+      "r = 462\n",
+      "r = 968\n",
+      "r = 1120\n",
+      "r = 767\n",
+      "r = 699\n",
+      "r = 1655\n",
+      "r = 1276\n",
+      "r = 1666\n",
+      "r = 1447\n",
+      "r = 770\n",
+      "r = 857\n",
+      "r = 1431\n",
+      "r = 2597\n",
+      "r = 2270\n",
+      "r = 2270\n",
+      "r = 2073\n",
+      "r = 2072\n",
+      "r = 3037\n",
+      "r = 4111\n",
+      "r = 4629\n",
+      "r = 5211\n",
+      "r = 5291\n",
+      "r = 5451\n",
+      "r = 5632\n",
+      "r = 8089\n",
+      "r = 9086\n",
+      "r = 10166\n",
+      "r = 9749\n",
+      "r = 10873\n",
+      "r = 14912\n",
+      "r = 17737\n",
+      "r = 19154\n",
+      "r = 20910\n",
+      "r = 24723\n",
+      "r = 24579\n",
+      "r = 27428\n",
+      "r = 31444\n",
+      "r = 31349\n",
+      "r = 45699\n",
+      "r = 52360\n",
+      "r = 53344\n",
+      "r = 61201\n",
+      "r = 79671\n",
+      "r = 91655\n",
+      "r = 96737\n",
+      "r = 128177\n",
+      "r = 147539\n",
+      "r = 147469\n",
+      "r = 145948\n",
+      "r = 139609\n",
+      "r = 206594\n",
+      "r = 294075\n",
+      "r = 284157\n",
+      "r = 305328\n",
+      "r = 316198\n",
+      "r = 429782\n",
+      "r = 365386\n",
+      "r = 525190\n",
+      "r = 689185\n",
+      "r = 695550\n"
+     ]
+    }
+   ],
    "source": [
     "p = PARAM_MAPPING[\"good\"]\n",
     "\n",
@@ -55,7 +357,6 @@
     "\n",
     "#stepper = stepthrough(covid_pomdp, planner, updator, initial_belief, \"b,s,sp,a,o,r\", max_steps=200)\n",
     "\n",
-    "#sim = RolloutSimulator()\n",
     "sim = HistoryRecorder(max_steps=100)\n",
     "stepper = simulate(sim, covid_pomdp, planner, updater, initial_belief)\n",
     "\n",
@@ -64,6 +365,13 @@
     "    @show r\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
